--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -48,7 +48,7 @@
             android:src="@drawable/ic_back_arrow" />
 
         <TextView
-            android:id="@+id/name_driver"
+            android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -63,12 +63,12 @@
 
 
         <ImageView
-            android:id="@+id/img_driver"
+            android:id="@+id/img"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
-            android:src="@drawable/ava" />
+            android:src="@drawable/ic_default_ava" />
 
     </LinearLayout>
 
@@ -85,6 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_chat_empty"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/chat_recycler"
         app:layout_constraintEnd_toEndOf="@+id/chat_recycler"
         app:layout_constraintStart_toStartOf="@+id/chat_recycler"
@@ -99,6 +100,7 @@
         android:text="@string/chatEmpty"
         android:textColor="#D0D0D0"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chat_empty_icon" />
@@ -147,5 +149,15 @@
             android:src="@drawable/ic_send_message" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/CustomProgressBar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
