--- a/app/src/main/res/layout/message_sender_item.xml
+++ b/app/src/main/res/layout/message_sender_item.xml
@@ -10,34 +10,55 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_message_sender">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/message_text_sender"
+        <ImageView
+            android:id="@+id/error"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="19dp"
+            android:src="@drawable/ic_info_price"
+            android:visibility="gone" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/roboto"
-            android:maxWidth="170dp"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_message_sender">
+
+
+                <TextView
+                    android:id="@+id/message_text_sender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/roboto"
+                    android:maxWidth="170dp"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/date_sender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="3dp"
+                android:fontFamily="@font/roboto"
+                android:textColor="#30000000"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/date_sender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginTop="3dp"
-        android:fontFamily="@font/roboto"
-        android:text="12:12"
-        android:textColor="#30000000"
-        android:textSize="12sp" />
 
 </LinearLayout>
