--- a/app/src/main/res/layout/phone_signup_fragment.xml
+++ b/app/src/main/res/layout/phone_signup_fragment.xml
@@ -22,6 +22,8 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <ImageButton
