--- a/app/src/main/res/layout/order_track_ride_layout.xml
+++ b/app/src/main/res/layout/order_track_ride_layout.xml
@@ -277,7 +277,8 @@
                             android:layout_marginStart="50dp"
                             android:layout_marginTop="15dp"
                             android:elevation="7dp"
-                            android:src="@drawable/ic_notification" />
+                            android:src="@drawable/ic_notification"
+                            android:visibility="gone" />
 
                     </RelativeLayout>
 
@@ -351,6 +352,25 @@
                 android:splitTrack="false"
                 android:thumb="@drawable/ic_seekbar_thumb"
                 android:thumbOffset="0dp" />
+
+            <View
+                android:id="@+id/view_end_ride"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/bg_btn_blue"
+                android:visibility="gone" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar_end_ride"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="2dp"
+                android:elevation="10dp"
+                android:theme="@style/WhiteProgressBar"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
