--- a/app/src/main/res/layout/orders_view_fragment.xml
+++ b/app/src/main/res/layout/orders_view_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/orders_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:id="@+id/orders_container">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,11 +17,11 @@
             android:background="@color/colorBlue"
             android:fontFamily="@font/roboto"
             android:gravity="center_horizontal"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:text="@string/listOrders"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"/>
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/text_search_orders"
@@ -32,16 +32,16 @@
             android:textColor="@android:color/darker_gray" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:visibility="gone"
             android:id="@+id/orders_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="gone" />
 
 
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/orders_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/CustomProgressBar"
@@ -49,7 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
