--- a/app/src/main/res/layout/driver_signup_add_bank.xml
+++ b/app/src/main/res/layout/driver_signup_add_bank.xml
@@ -52,34 +52,23 @@
                 android:id="@+id/payments_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
                 android:visibility="gone" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="#000000" />
 
             <TextView
                 android:id="@+id/add_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:drawableEnd="@drawable/ic_arrow_right"
                 android:paddingStart="20dp"
                 android:paddingTop="23dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="23dp"
                 android:text="@string/add_payment"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="#000000" />
+                android:textSize="16sp"
+                android:theme="@style/ThemeOverlay.AppCompat.Light" />
         </LinearLayout>
 
     </ScrollView>
