--- a/app/src/main/res/layout/regular_create_ride_layout.xml
+++ b/app/src/main/res/layout/regular_create_ride_layout.xml
@@ -414,7 +414,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:drawableEnd="@drawable/ic_arrow_right"
-                android:paddingStart="70dp"
+                android:layout_marginStart="15dp"
                 android:paddingTop="27dp"
                 android:paddingBottom="27dp"
                 android:text="@string/add_payment"
