--- a/app/src/main/res/navigation/driver_signup_nav.xml
+++ b/app/src/main/res/navigation/driver_signup_nav.xml
@@ -33,8 +33,8 @@
         tools:layout="@layout/signup_car_info_fragment">
 
         <action
-            android:id="@+id/show_signup_step_view"
-            app:destination="@id/signup_step_view"
+            android:id="@+id/show_banking_select"
+            app:destination="@id/banking_select"
             app:enterAnim="@anim/fade_in"
             app:popEnterAnim="@anim/fade_in" />
 
@@ -42,6 +42,22 @@
         <action
             android:id="@+id/show_suggest_view"
             app:destination="@id/suggest_view" />
+    </fragment>
+
+
+    <fragment
+        android:id="@+id/banking_select"
+        android:name="bonch.dev.poputi.presentation.modules.driver.signup.banking.view.BankingSelectView"
+        android:label="banking_select_view"
+        tools:layout="@layout/driver_signup_add_bank">
+
+        <action
+            android:id="@+id/show_signup_step_view"
+            app:destination="@id/signup_step_view"
+            app:enterAnim="@anim/fade_in"
+            app:popEnterAnim="@anim/fade_in" />
+
+
     </fragment>
 
 
